4872 system crash after nlm_gc hits bogus mutex Reviewed by: Adam Leventhal <ahl@delphix.com> Reviewed by: Christopher Siden <christopher.siden@delphix.com> Reviewed by: Eric Schrock <eric.schrock@delphix.com> Reviewed by: Jeremy Jones <jeremy@delphix.com> Approved by: Garrett D'Amore <garrett@damore.org>